--- a/CSS/cuenta.css
+++ b/CSS/cuenta.css
@@ -55,18 +55,6 @@ header {
     margin-bottom: 10px;
 }
 
-.menu_content {
-    margin-right: 10%;
-    margin-left: 10%;
-    font-size: 2rem;
-    border-bottom: 5px solid #ffffff00;
-    transition: all .15s linear;
-}
-
-.menu_content:hover {
-    border-bottom: 5px solid #1C6EA4;
-}
-
 article {
     font-size: 50px;
 }
@@ -256,4 +244,19 @@ p {
 hr {
     width: 40%;
     margin: 0;
+}
+
+a {
+    display: flex;
+    text-decoration: none;
+    color: black;
+    margin-right: 5%;
+    margin-left: 5%;
+    font-size: 2rem;
+    border-bottom: 5px solid #ffffff00;
+    transition: all .15s linear;
+}
+
+a:hover {
+    border-bottom: 5px solid #1C6EA4;
 }
