--- a/CSS/modificarPregunta.css
+++ b/CSS/modificarPregunta.css
@@ -289,3 +289,18 @@ h2 {
     text-align: center;
     cursor: default;
 }
+
+a {
+    display: flex;
+    text-decoration: none;
+    color: black;
+    margin-right: 5%;
+    margin-left: 5%;
+    font-size: 2rem;
+    border-bottom: 5px solid #ffffff00;
+    transition: all .15s linear;
+}
+
+a:hover {
+    border-bottom: 5px solid #1C6EA4;
+}
