--- a/CSS/preguntasPendientes.css
+++ b/CSS/preguntasPendientes.css
@@ -57,18 +57,6 @@ header {
     margin-bottom: 10px;
 }
 
-.menu_content {
-    margin-right: 5%;
-    margin-left: 5%;
-    font-size: 2rem;
-    border-bottom: 5px solid #ffffff00;
-    transition: all .15s linear;
-}
-
-.menu_content:hover {
-    border-bottom: 5px solid #1C6EA4;
-}
-
 article {
     font-size: 50px;
 }
@@ -209,4 +197,19 @@ h2 {
     align-items: flex-end;
     justify-content: right;
     padding: 5px 10px;
+}
+
+a {
+    display: flex;
+    text-decoration: none;
+    color: black;
+    margin-right: 5%;
+    margin-left: 5%;
+    font-size: 2rem;
+    border-bottom: 5px solid #ffffff00;
+    transition: all .15s linear;
+}
+
+a:hover {
+    border-bottom: 5px solid #1C6EA4;
 }
