--- a/CSS/paginaError.css
+++ b/CSS/paginaError.css
@@ -26,8 +26,21 @@ h1 {
     align-items: center;
     justify-content: center;
     background-color: #4e4e4e9f;
+    flex-direction: column;
 }
 
 .miau {
     background-image: url("../img/gatoError2.jpg");
+}
+
+button {
+    background-color: rgb(43, 159, 226);
+    border: 1px solid rgb(43, 159, 226);
+    border-radius: 5px;
+    padding: 10px 15px;
+}
+
+button:hover {
+    background-color: rgb(170, 224, 255);
+    border: 1px solid rgb(170, 224, 255);
 }
