Agregar las conexiones de usuario. doctor y cambiar los alert por swal

--- a/QUETZUAL(doctor)/CSS/preguntasPendientes.css
+++ b/QUETZUAL(doctor)/CSS/preguntasPendientes.css
@@ -184,3 +184,18 @@ h3 {
     text-align: justify;
     margin: 10px;
 }
+
+a {
+    display: flex;
+    text-decoration: none;
+    color: black;
+    margin-right: 5%;
+    margin-left: 5%;
+    font-size: 2rem;
+    border-bottom: 5px solid #ffffff00;
+    transition: all .15s linear;
+}
+
+a:hover {
+    border-bottom: 5px solid #1C6EA4;
+}
