--- a/QUETZUAL(doctor)/CSS/ranking.css
+++ b/QUETZUAL(doctor)/CSS/ranking.css
@@ -331,3 +331,18 @@ p {
     border-bottom: 5px solid white;
     display: flex;
 }
+
+a {
+    display: flex;
+    text-decoration: none;
+    color: black;
+    margin-right: 5%;
+    margin-left: 5%;
+    font-size: 2rem;
+    border-bottom: 5px solid #ffffff00;
+    transition: all .15s linear;
+}
+
+a:hover {
+    border-bottom: 5px solid #1C6EA4;
+}
