--- a/QUETZUAL(doctor)/CSS/inicioDoctor.css
+++ b/QUETZUAL(doctor)/CSS/inicioDoctor.css
@@ -115,3 +115,18 @@ button {
 h1 {
     padding: 0 15px;
 }
+
+a {
+    display: flex;
+    text-decoration: none;
+    color: black;
+    margin-right: 5%;
+    margin-left: 5%;
+    font-size: 2rem;
+    border-bottom: 5px solid #ffffff00;
+    transition: all .15s linear;
+}
+
+a:hover {
+    border-bottom: 5px solid #1C6EA4;
+}
