--- a/QUETZUAL(doctor)/CSS/responderPregunta.css
+++ b/QUETZUAL(doctor)/CSS/responderPregunta.css
@@ -257,3 +257,18 @@ select {
     width: 500px;
     max-width: 90%;
 }
+
+a {
+    display: flex;
+    text-decoration: none;
+    color: black;
+    margin-right: 5%;
+    margin-left: 5%;
+    font-size: 2rem;
+    border-bottom: 5px solid #ffffff00;
+    transition: all .15s linear;
+}
+
+a:hover {
+    border-bottom: 5px solid #1C6EA4;
+}
