--- a/QUETZUAL(doctor)/CSS/sesionUsuario.css
+++ b/QUETZUAL(doctor)/CSS/sesionUsuario.css
@@ -51,6 +51,23 @@ header {
     cursor: pointer;
 }
 
+.submit {
+    background-color: #63E29C;
+    color: rgb(0, 0, 0);
+    border-radius: 5px;
+    padding: 10px 15px;
+    margin: 10px;
+    border: 1px solid #63E29C;
+    font-size: 1.35rem;
+    transition: all .15s linear
+}
+
+.submit:hover {
+    background-color: #73ffb2;
+    border: 1px solid #73ffb2;
+    cursor: pointer;
+}
+
 .menu {
     display: flex;
     justify-content: center;
@@ -162,7 +179,6 @@ select:hover {
 }
 
 .respuesta {
-    margin: 30px 20px;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -175,6 +191,7 @@ select:hover {
     background-color: #E3E3E3;
     box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.602);
     text-align: justify;
+    margin: 20px;
 }
 
 .mini_header {
