--- a/QUETZUAL(doctor)/CSS/sesionUsuario.css
+++ b/QUETZUAL(doctor)/CSS/sesionUsuario.css
@@ -316,3 +316,14 @@ a:hover {
 .cubitoVerde {
     cursor: pointer;
 }
+
+.area {
+    background-color: #ffffff;
+    width: 90%;
+    min-width: 250px;
+    max-width: 600px;
+    box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.602);
+    resize: none;
+    height: 100px;
+    margin: 10px auto;
+}
